# ghtop

./: .gitignore  00_dashing.ipynb  00_ghtop.ipynb  01_ghtop.ipynb  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  dashing.py  ghtop.py  pyproject.toml  requirements.txt  settings.ini  setup.py
docs/: _config.yml  dashing.html  ghtop.html  index.html  index.md  sidebar.json
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
ghtop/: _nbdev.py  all_rich.py  dashing.py  ghtop.py  richext.py
nbs/: 00_ghtop.ipynb  index.ipynb  rich_test.ipynb
old_scripts/: ghtop.py
