[tool.poetry]
name = "ghtop"
version = "0.1.0"
description = "See what's happening on GitHub in real time"
authors = ["Nat Friedman <nat@nat.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
DateTime = "^4.3"
pytz = "^2020.4"
enlighten = "^1.7.0"
blessed = "^1.17.12"
emoji = "^0.6.0"
dashing = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
